# zamburak

./: .gitignore  .gitmodules  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  codecov.yml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/test-utils/: Cargo.toml
crates/test-utils/src/: full_monty_observer_probe_helpers.rs  full_monty_probe_helpers.rs  lib.rs
crates/zamburak-core/: Cargo.toml
crates/zamburak-core/src/: authority.rs  lib.rs
crates/zamburak-core/src/authority/: errors.rs  test_helpers.rs  tests.rs  types.rs  validation.rs
crates/zamburak-core/src/i18n/: localizer.rs  mod.rs
crates/zamburak-monty/: Cargo.toml
crates/zamburak-monty/src/: external_call.rs  external_call_tests.rs  lib.rs  observer.rs  observer_tests.rs  run.rs  run_tests.rs
crates/zamburak-monty/src/run/: flow.rs
crates/zamburak-policy/: Cargo.toml
crates/zamburak-policy/src/: engine.rs  lib.rs  load_outcome.rs  migration.rs  policy_def.rs  sink_enforcement.rs
crates/zamburak-policy/src/policy_def/: tests.rs
crates/zamburak-policy/src/sink_enforcement/: mod.rs  tests.rs
docs/: adr-001-localization-and-internationalization-with-fluent.md  adr-001-monty-ifc-vm-hooks.md  adr-002-localization-and-internationalization-with-fluent.md  adr-monty-ifc-vm-hooks.md  complexity-antipatterns-and-refactoring-strategies.md  contents.md  documentation-style-guide.md  localizable-rust-libraries-with-fluent.md  monty-fork-policy.md  policy-examples-financial-services-scenarios.md  policy-examples.md  reliable-testing-in-rust-via-dependency-injection.md  repository-layout.md  roadmap.md  rstest-bdd-users-guide.md  rust-doctest-dry-guide.md  rust-testing-with-rstest-fixtures.md  scripting-standards.md  tech-baseline.md  users-guide.md  verification-targets.md  zamburak-design-document.md  zamburak-engineering-standards.md
docs/execplans/: 0-1-1-freeze-canonical-policy-schema-v1.md  0-1-2-schema-migration-transforms.md  0-1-3-authority-token-lifecycle-checks.md  0-2-1-align-toolchain-and-quality-gate-baseline.md  0-2-1-authority-token-lifecycle-checks.md  0-2-2-wire-in-phase-gate-checks-from-verification-targets.md  0-2-3-automation-script-baseline.md  0-3-1-enforce-design-level-conformance-suites.md  0-4-1-add-full-monty-as-git-submodule.md  0-4-2-make-monty-sync-target.md  0-5-1-implement-stable-runtime-ids.md  0-5-2-introduce-generic-runtime-observer-events-in-full-monty.md  0-5-3-generic-snapshot-extension-bytes.md  0-5-4-enforce-track-a-compatibility-and-performance-invariants.md  0-6-1-zamburak-monty-adapter-crate.md  design-document-logisphere-farewell.md
policies/: default.yaml  schema.json
scripts/: _cuprum_helpers.py  monty_sync.py  verify_script_baseline.py
scripts/tests/: conftest.py  monty_sync_test_helpers.py  test_monty_sync.py  test_monty_sync_bdd.py  test_monty_sync_cli.py  test_monty_sync_failures.py  test_monty_sync_workflow.py  test_verify_script_baseline.py  test_verify_script_baseline_bdd.py  test_verify_script_baseline_cli.py  test_verify_script_baseline_validation.py
scripts/tests/features/: monty_sync.feature  script_baseline.feature
src/: lib.rs  monty_fork_policy_contract.rs  phase_gate_contract.rs
tests/benchmarks/: full_monty_track_a_overhead.rs  main.rs
tests/compatibility/: full_monty_observer_bdd.rs  full_monty_snapshot_extension_bdd.rs  full_monty_track_a_invariants_bdd.rs  main.rs  phase_gate_bdd.rs  policy_schema_bdd.rs
tests/compatibility/features/: full_monty_observer.feature  full_monty_snapshot_extension.feature  full_monty_track_a_invariants.feature  localization_contract.feature  monty_fork_policy.feature  phase_gate.feature  policy_schema.feature
tests/compatibility/localization_contract/: mod.rs
tests/compatibility/monty_fork_policy/: mod.rs
tests/integration/: governed_run_bdd.rs  main.rs
tests/integration/features/: governed_run.feature
tests/security/: authority_lifecycle_bdd.rs  full_monty_observer_security_bdd.rs  main.rs  migration_security.rs
tests/security/authority_lifecycle_bdd/: helpers.rs  mod.rs
tests/security/features/: authority_lifecycle.feature  full_monty_observer_security.feature  llm_sink_enforcement.feature
tests/security/llm_sink_enforcement/: mod.rs
tests/test_utils/: full_monty_observer_probe_helpers.rs  policy-v0.json  policy-v0.yaml  policy_yaml.rs
