[package]
name = "zamburak"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/test-utils", "crates/zamburak-core", "crates/zamburak-monty", "crates/zamburak-policy"]
exclude = ["third_party/full-monty"]
resolver = "3"

# Workspace package metadata used by both zamburak crates and the vendored
# monty crate (which inherits edition, version, etc. from its workspace root).
# Defining these fields here allows monty to resolve its workspace-inherited
# fields when referenced as a path dependency from zamburak-monty.
[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.85"
license = "MIT"
authors = []
description = "Zamburak workspace"
keywords = []
categories = []
homepage = ""
repository = ""

[workspace.dependencies]
newt-hype = "0.2.0"
thiserror = "2.0.11"

# Dependencies inherited by the vendored monty crate via workspace = true.
# These mirror the definitions in third_party/full-monty/Cargo.toml and must
# be kept in sync when the submodule is updated.
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_parser", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_python_ast", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", package = "ruff_text_size", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
indexmap = { version = "2.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"

[dependencies]
camino = "1.2.2"
cap-std = { version = "3.4.5", features = ["fs_utf8"] }
newt-hype.workspace = true
thiserror.workspace = true
zamburak-core = { path = "crates/zamburak-core" }
zamburak-policy = { path = "crates/zamburak-policy" }

[dev-dependencies]
backon = { version = "1.6.0", features = ["std-blocking-sleep"] }
monty = { path = "third_party/full-monty/crates/monty" }
rstest = "0.26.1"
rstest-bdd = "0.5.0"
rstest-bdd-macros = { version = "0.5.0", features = ["compile-time-validation"] }
test-utils = { path = "crates/test-utils" }
zamburak-monty = { path = "crates/zamburak-monty" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"
cognitive_complexity                = "deny"
needless_pass_by_value              = "deny"
implicit_hasher                     = "deny"

# 2. debugging leftovers
dbg_macro                           = "deny"
print_stdout                        = "deny"
print_stderr                        = "deny"

# 2. panic-prone operations
unwrap_used                         = "deny"
expect_used                         = "deny"
indexing_slicing                    = "deny"
string_slice                        = "deny"
integer_division                    = "deny"
integer_division_remainder_used     = "deny"
panic_in_result_fn                  = "deny"
unreachable                         = "deny"

# 4. portability
host_endian_bytes                   = "deny"
little_endian_bytes                 = "deny"
big_endian_bytes                    = "deny"

# 5. nursery idiom polish
let_underscore_must_use             = "deny"
or_fun_call                         = "deny"
option_if_let_else                  = "deny"
self_named_module_files             = "deny"
shadow_reuse                        = "deny"
shadow_same                         = "deny"
shadow_unrelated                    = "deny"
str_to_string                       = "deny"
string_lit_as_bytes                 = "deny"
try_err                             = "deny"
unneeded_field_pattern              = "deny"
use_self                            = "deny"

# 6. numerical foot-guns
float_arithmetic                    = "deny"
cast_possible_truncation            = "deny"
cast_possible_wrap                  = "deny"
cast_precision_loss                 = "deny"
lossy_float_literal                 = "deny"

# 7. API ergonomics
missing_const_for_fn                = "deny"
must_use_candidate                  = "deny"
unused_async                        = "deny"

# 8. Error handling
missing_panics_doc                  = "deny"
error_impl_error                    = "deny"
result_large_err                    = "deny"

[lints.rust]
missing_docs                        = "deny"

[lints.rustdoc]
missing_crate_level_docs            = "deny"
